Migrate to Spring Boot 3.1.4
Rework on many frontend/backend parts of the application as we also moved to Netflix's DGS GraphQL library. There's still plenty of fixes to be addressed.