@@ -54,12 +54,12 @@ public abstract class JobListingMapper {
 
     public Organization mapOrganization(Long organizationId) {
         return organizationRepository.findById(organizationId)
-                .orElseThrow(() -> new OrganizationNotFoundException(String.format("Organization by id %d does not exist", organizationId), "organizationId"));
+                .orElseThrow(() -> new OrganizationNotFoundException("Organization by id %d does not exist".formatted(organizationId), "organizationId"));
     }
 
     public JobCategory mapJobCategory(Long categoryId) {
         return jobCategoryRepository.findById(categoryId)
-                .orElseThrow(() -> new JobCategoryNotFoundException(String.format("Job Category by id %d does not exist", categoryId), "categoryId"));
+                .orElseThrow(() -> new JobCategoryNotFoundException("Job Category by id %d does not exist".formatted(categoryId), "categoryId"));
     }
 
     public City mapCity(String location) {
@@ -68,11 +68,11 @@ public abstract class JobListingMapper {
 
     public Job mapJob(Long jobId) {
         return jobService.findById(jobId)
-                .orElseThrow(() -> new JobNotFoundException(String.format("Job by id %d does not exist", jobId), "jobId"));
+                .orElseThrow(() -> new JobNotFoundException("Job by id %d does not exist".formatted(jobId), "jobId"));
     }
 
     public Recruiter mapRecruiter(Long recruiterId) {
         return recruiterRepository.findById(recruiterId)
-                .orElseThrow(() -> new UserNotFoundException(String.format("User by id %d does not exist", recruiterId)));
+                .orElseThrow(() -> new UserNotFoundException("User by id %d does not exist".formatted(recruiterId)));
     }
 }
