@@ -1,6 +1,7 @@
 package com.irb.paxton.mail;
 
 import com.irb.paxton.config.properties.MailProperties;
+import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.mail.javamail.JavaMailSender;
@@ -9,11 +10,10 @@ import org.springframework.stereotype.Service;
 import org.thymeleaf.TemplateEngine;
 import org.thymeleaf.context.Context;
 
-import javax.annotation.PostConstruct;
-import javax.mail.Message;
-import javax.mail.MessagingException;
-import javax.mail.internet.InternetAddress;
-import javax.mail.internet.MimeMessage;
+import jakarta.mail.Message;
+import jakarta.mail.MessagingException;
+import jakarta.mail.internet.InternetAddress;
+import jakarta.mail.internet.MimeMessage;
 import java.io.UnsupportedEncodingException;
 import java.util.Date;
 
@@ -50,7 +50,7 @@ public class PaxtonMailService implements EmailService {
             msg.setSentDate(new Date());
             msg.setRecipients(Message.RecipientType.TO, InternetAddress.parse(to, false));
             emailSender.send(msg);
-            log.info(String.format("A registration confirmation email was sent to the user's address = %s", to));
+            log.info("A registration confirmation email was sent to the user's address = %s".formatted(to));
         } catch (MessagingException | UnsupportedEncodingException e) {
             log.error(e.getLocalizedMessage(), e);
             throw new RuntimeException(e);
